# docs/swagger.json
@@ -118,11 +118,6 @@
         },
         "/users": {
             "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "List users with optional search and pagination",
                 "produces": [
                     "application/json"
